# HRI-Final-GeoBot

./: README.md
src/: package.xml  setup.py
src/config/: params.yaml
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/robot_control_architecture_pkg/lib/robot_control_architecture_pkg/: robot_quiz_lidar_node
src/install/robot_control_architecture_pkg/share/robot_control_architecture_pkg/: package.sh  package.xml
src/install/robot_control_architecture_pkg/share/robot_control_architecture_pkg/config/: params.yaml
src/install/robot_control_architecture_pkg/share/robot_control_architecture_pkg/launch/: robot_control_architecture.launch.py
src/launch/: robot_control_architecture.launch.py
src/log/: latest_build
src/robot_control_architecture_pkg/: robot_quiz_lidar_node.py  simple_tts_node.py
