<?xml version="1.0"?>
<package format="3">
  <name>robot_control_architecture_pkg</name>
  <version>0.0.1</version>
  <description>Interactive robot control architecture for an educational game using TurtleBot4.</description>

  <maintainer email="zy489@cornell.edu">Zifan Yang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- tests -->
  <test_depend>pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

